--- a/mediaQuery/style.css
+++ b/mediaQuery/style.css
@@ -1,74 +1,63 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
-    border: 2px solid black;
-    /* border: 2px dotted red; */
-    background-color: cadetblue;
-    width: 90%;
-    height: 500px;
+.container{
+    border: 1px solid cadetblue;
+    width: 50%;
     margin: auto;
-    color: white;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: aqua;
+    color: black;
 }
-
-/* grid section start  */
-.grid-container {
-    border: 2px solid red;
+.grid-container{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 100px;
+    width: 80%;
+    margin: auto;
+    grid-template-columns: repeat(4,1fr);
+    /* grid-auto-rows: 150px; */
+    gap: 20px;
+    border: 2px solid salmon;
+    font-size: 25px;
+}
+.card-container{
+    width: 100%;
+    position: relative;
+
+}
+.card-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.items{
+    border: 1px solid black;
+    padding: 10px;
+}
+.dis-container{
+position: absolute;
+top: 10px;
+left: 10px;
+background-color: palevioletred;
+color: white;
+font-size: 18px;
+padding: 5px 10px;
 }
 
-/* grid section end  */
-
-
-/* media query for grid section start  */
-@media screen and (max-width:768px) {
-    .grid-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media screen and (max-width:480px) {
-    .grid-container {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-/* media query for grid section end  */
-
-/* normal media query example using max width start  */
-@media screen and (max-width:768px) {
-    .container {
-        border: 2px dotted red;
-        width: 70%;
-        font-size: 20px;
-    }
-}
-
-@media screen and (max-width:480px) {
-    .container {
-        border: 2px dotted red;
-        width: 80%;
-        font-size: 20px;
-    }
-}
-
-/* normal media query example using max width end */
-
-/* normal media query example using min width start  */
-/* @media screen and (min-width:600px){
+/* media query start  */
+@media screen and (max-width:768px){
     .container{
-        border: 2px dotted red;
-        width: 50%;
-        font-size: 30px;
+        width: 70%;
     }
-} */
-/* normal media query example using min width start  */
+    .grid-container{
+        width: 90%;
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media screen and (max-width:480px){
+    .container{
+        width: 90%;
+    }
+    .grid-container{
+        font-size: 15px;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .items{
+        background-color: cadetblue;
+    }
+}
